tests/examples/bad/bad002.lat
// Function inside Function

int main() {
    void f() {
        return;
    }

    return 1;
}